--- a/nodejs/Dockerfile
+++ b/nodejs/Dockerfile
@@ -20,6 +20,6 @@ ENV DOCKERIZE_VERSION v0.6.0
 RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
     && tar -C /usr/local/bin -xzvf dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
     && rm dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz
-    
+
 # start app
-CMD dockerize -wait tcp://db:3306 -timeout 60m yarn start
+CMD dockerize -wait tcp://dbmysql:3306 -timeout 60m yarn start
