--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -2,22 +2,13 @@ version: '2'
 
 services:
 
-  alpine:
-    container_name: alpine
-    build:
-      context: alpine/
-      dockerfile: Dockerfile
-    command: tail -f /dev/null
-    depends_on:
-      - nodejs
-
   nodejs:
     container_name: nodejs
     build:
       context: nodejs/
       dockerfile: Dockerfile
     environment:
-      - MYSQL_ROOT_PASSWORD=secret
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
     volumes:
       - './nodejs:/app'
       - '/app/node_modules'
@@ -32,7 +23,7 @@ services:
     image: mysql:5.7
     container_name: mysql
     environment:
-      - MYSQL_ROOT_PASSWORD=secret
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
     volumes:
       - my-db:/var/lib/mysql
       - ./mysql:/docker-entrypoint-initdb.d/:rw
