build time variable

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: '3'
 
 services:
 
@@ -16,6 +16,8 @@ services:
     build:
       context: nodejs/
       dockerfile: Dockerfile
+      args: 
+        CONFIG: v0.6.0
     environment:
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
     volumes:
